--- a/_posts/2010-06-22-state-of-the-realtime-web-publishers.textile
+++ b/_posts/2010-06-22-state-of-the-realtime-web-publishers.textile
@@ -44,12 +44,15 @@ h3. Facebook
 Facebook "jumped on the boat":http://developers.facebook.com/docs/api/realtime very recently. Their "private" approach has long prevented them to push their content, because it would mean that they don't have any control on the data once it's out the door. Until a few weeks ago, they were fighting this by forcing any person who got content from Facebook to delete it after 24 hours. In practice, it meant that any service would have to poll Facebook every 24 hours for all the data they care about. Broken.
 
 This changed a few weeks ago, because Facebook started to push some content (obviously "people who hate their boss":http://graph.facebook.com/search?q=I%20hate%20my%20boss don't get it). Facebook is becoming very good at communicating stuff, they hired a bunch of Open Web advocates and _they now claim that they are open_. Listen to me : +Facebook is Open+. +Facebook is Open+, +Facebook is Open+. Got it? *Facebook is Open*. _Except that it's not_.
+
 Of course, they say they use something similar to PubSubHubbub. Except that hum, the point of PubSubHubbub is to be an open and *standard* protocol. The standard part is very important. It means that services could interact together, since they speak the same language. Currently, this is not true : the PubSubHubbub from Facebook *is not* the PubSubHubbub defined by the spec, "for many good? reasons":http://montrics.blogspot.com/2010/05/facebooks-realtime-updates-use-cases.html, but calling it PubSubHubbub has more marketing value, I guess.
+
 The worst thing about all this is that *Facebook does push* a hell of a lot of data... to whom you may ask? "To Google":http://searchengineland.com/facebook-fan-page-updates-now-in-google-real-time-search-36836. You see the pattern : an open platform that pushes content to some people (just not you, because your too small), based on business relationships, again.
 
 h3. The rest of the world of realtime publishers
 
 By reading the 2 previous paragraphs, you may think I'm some kind of socialist and I hate business relationships. Well, I'm french, so that could explain it, but I'd argue that *business relationships are also walled-gardens*. Anytime you have a one-to-one, it's about the 2, not about the others, right? If you married your spouse, it's not to have -sex- dinner every night with a different person, is it? 
+
 *In many ways, the relationships that Twitter and Facebook have with a very small subset of other application is de-facto excluding the rest of the world, and the rest of the future world.*
 
 Interestingly enough _both Twitter and Facebook hide behind their APIs_. Having an API is great, but it's just another form of slavery (thanks "@brad":http://twitter.com/bradfitz for the analogy). The consumers of these APIs are at the mercy of the API provider. Twitter decides to shut down HTTP Basic Auth? Sorry little app maker, you'll have to shut down your app or abide by this new commandment "Thou shall not ask for user credentials"[1]. Facebook changes their TOS? Sorry Zynga, no more invites for you.
@@ -58,7 +61,9 @@ Interestingly enough _both Twitter and Facebook hide behind their APIs_. Having 
 
 Luckily we have this protocol. We even have several (that's the beauty of it : people fight for the shared wealth!). At Superfeedr, we placed our bets on "PubSubHubbub":http://superfeedr.com/documentation#pubsubhubbub and "XMPP PubSub":http://superfeedr.com/documentation#xmpp_pubsub.
 
-Most of the smaller (but much numerous) _publishers have chosen the protocol approach_. Whether it's because they genuinely believe that it's the good approach, or because they're actually too small to force their API down other people's throats is irrelevant. What matters is that now, a*ll the main blogging platforms : Wordpress, SixApart, Blogger, Tumblr, Posterous are using the same protocol : PubSubHubbub*. Some other smaller social networks, like Cliqset or Status.net and Gowalla are using it as well. Even a few newspapers! Combined, this is probably bigger than Twitter or Facebook's data. _Soon, it will be much much bigger, because so many publishers don't push their content yet_...
+Most of the smaller (but much numerous) _publishers have chosen the protocol approach_. Whether it's because they genuinely believe that it's the good approach, or because they're actually too small to force their API down other people's throats is irrelevant. What matters is that now, *all the main blogging platforms : Wordpress, SixApart, Blogger, Tumblr, Posterous are using the same protocol : PubSubHubbub*. Some other smaller social networks, like Cliqset or Status.net and Gowalla are using it as well. Even a few newspapers! 
+
+Combined, this is probably bigger than Twitter or Facebook's data. _Soon, it will be much much bigger, because so many publishers don't push their content yet_...
 
 h2. The non realtime publishers
 
@@ -76,7 +81,6 @@ One could argue that pushing data is letting 3rd party application use it. That'
 
 Of course, "we talked about the hundreds":http://blog.superfeedr.com/gospel/pubsubhubbub/synchronization/pubsubhubbub-for-synchronization/ of new usages that are yet to be seen, from sync, to mobile, from presence to notifications... we haven't seen anything yet. Please, "publishers, let others benefit from your data":http://superfeedr.com/publisher. _Publishing your awesome content without distributing it is pretty much like making the best product in the world but leaving it in the factory._
 
-It's time for content publishers to make their content dynamic and push it so they can control its distribution. 
-
+*It's time for content publishers to make their content dynamic and push it so they can control its distribution.*
 
 fn1. I'm not advocating for HTTP Basic Auth, right? Just saying that thousands of small apps will shut their door, just because Twitter decided so.
