--- a/_posts/2010-07-06-the-web-is-disolving.textile
+++ b/_posts/2010-07-06-the-web-is-disolving.textile
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: The web disolving
+title: The web dissolving
 categories: []
 author_name: Julien
 author_uri: http://twitter.com/julien51
