--- a/_posts/2010-09-21-how-to-make-your-wordpress-blog-realtime.textile
+++ b/_posts/2010-09-21-how-to-make-your-wordpress-blog-realtime.textile
@@ -7,25 +7,25 @@ author_uri: http://twitter.com/julien51
 author_email_md5: b30ce50678f0e934eaa6697425c59dd7
 ---
 
-If you've been blogging for more than a few days, you already found out that the faster your content is propagated, the more engagement you get ; it's shared, retweeted, commented, liked more in the first minutes after publication than in the next days altogether. The protocol PubSubHubbub helps you by making sure your content is pushed directly from your blog, to applications such as Google Reader, Twitterfeed, Digg, Netvibes, FeedMyInbox and many many others.
+If you've been blogging for more than a few days, you already found out that the faster your content is propagated, the more engagement you get ; it's shared, retweeted, commented, liked more in the first minutes after publication than in the next days altogether. The protocol PubSubHubbub helps you by making sure your content is pushed directly from your blog, to applications such as "Google Reader":http://www.google.com/reader/view/, "Ping.fm":http://ping.fm/, "Twitterfeed":http://twitterfeed.com/, "Digg":http://digg.com/, "FeedMyInbox":http://www.feedmyinbox.com/ and many many others.
 
-Superfeedr hosts hubs for many big and small publishers. We'd be happy to count your blog into that list too!
+"Superfeedr hosts hubs":http://superfeedr.com/publisher for many big and small publishers. We'd be happy to count your blog into that list too!
 
 h3. 1- Open a Superfeedr account
 
-This account will offer features such as analytics, full export, and, of course, realtime distribution of your content.
+This account will offer features such as _analytics_, _full export_, and, of course, *realtime distribution of your content*.
 It shouldn't take more than 3 minutes to fill-in the registration form and confirm your account. with the link we've emailed you.
 
 h3. 2- Create a Hub
 
 Again, this is a small form and it shouldn't take more than a few minutes to get going. You can certainly tweak the design a little bit. It's basically a landing page for people building apps that will consume your content. _It is technical_, but end-users are not expected to see this page. 
-Once this is done, you're all set on the Superfeedr side, and you'll have to configure your blog.
+*Once this is done, you're all set on the Superfeedr side*, and you'll have to configure your blog.
 
 h3. 3- Setup the plugin
 
-If you have a wordpress.org blog, do a search for PubSubHubbub in the plugins settings. Once installed, activate it. Finally, edit it's settings to point to the hub you build in step 2.
+If you have a wordpress.org blog, "install this plugin":http://wordpress.org/extend/plugins/pubsubhubbub/ (or do a search for *PubSubHubbub* in the plugins settings). Once installed, activate it. Finally, edit it's settings to point to the hub you build in step 2.
 
 You're good to go!
 
-To make sure it all works, please use Google Reader to subscribe to your own feed.
+To make sure it all works, please use Google Reader to subscribe to your own feed and publish something new. It should appear there within seconds!
 
