--- a/_posts/2010-12-02-websockets-and-comet.textile
+++ b/_posts/2010-12-02-websockets-and-comet.textile
@@ -26,7 +26,7 @@ Since an HTTP connection is still mostly one-way, there is no way to send data o
 
 h3. Websockets
 
-Unless you leaved in a cave for the last year, you probably already heard of "websockets":http://en.wikipedia.org/wiki/WebSockets. They're now supported by modern browsers, such as Chrome, Firefox, Safari, Opera... etc. As they are *part of HTML5*, we can certainly expect an extended support in the coming months, and we want your apps to be ready for when that happens, which is why we also release a websocket API. It's actually very similar to the Comet version and uses the same conventions. It also uses HTTP basic header to authenticate you.
+Unless you lived in a cave for the last year, you probably already heard of "websockets":http://en.wikipedia.org/wiki/WebSockets. They're now supported by modern browsers, such as Chrome, Firefox, Safari, Opera... etc. As they are *part of HTML5*, we can certainly expect an extended support in the coming months, and we want your apps to be ready for when that happens, which is why we also release a websocket API. It's actually very similar to the Comet version and uses the same conventions. It also uses HTTP basic header to authenticate you.
 
 The only significant difference is that websockets _are duplex_. You can receive and send traffic on the same socket! So, to subscribe to feeds, you can very simply send message on the websocket. The messages use the same convention explained a little above : <code>["subscribe", {:topic => "http://superfeedr.com/track/music"}]</code> will perform a subscription.
 
