--- a/_posts/2011-04-04-xmpp-over-websockets.textile
+++ b/_posts/2011-04-04-xmpp-over-websockets.textile
@@ -13,7 +13,7 @@ HTTP's massive adoption was driven by some great server software : "Apache":http
 
 "HTML5":http://www.html5rocks.com/ comes with an awesome push technology : "websockets":http://dev.w3.org/html5/websockets/. They open the door for *support of XMPP in the browsers*. Of course Bosh exists, but it's not nearly as elegant, fast or scalable as the server needs to keep some kind of state. Whoever played with Bosh for a while knows how dirty it feels.
 
-Today, we're proud to release an "Ejabberd module that builds Websockets":https://github.com/superfeedr/ejabberd-websockets in the XMPP server, and makes it a fist class citizen in terms of underlying protocol. It's probably not perfect though, and it's definitely a first attempt, but feel free to install on your own servers. We also had to branch "Jack":http://metajack.im/ 's amazing "Strophejs":https://github.com/superfeedr/strophejs to *split the core.js and bosh.js part*, so we could easily replace bosh.js with websocket.js. This also needs more work and love, so feel free to branch and improve that code!
+Today, we're proud to release an "Ejabberd module that builds Websockets":https://github.com/superfeedr/ejabberd-websockets in the XMPP server, and makes it a first class citizen in terms of underlying protocol. It's probably not perfect though, and it's definitely a first attempt, but feel free to install on your own servers. We also had to branch "Jack":http://metajack.im/ 's amazing "Strophejs":https://github.com/superfeedr/strophejs to *split the core.js and bosh.js part*, so we could easily replace bosh.js with websocket.js. This also needs more work and love, so feel free to branch and improve that code!
 
 I sincerely want to thank "Nathan":http://unclenaynay.com/ for his awesome work on this. Let us know what you think!
 
