--- a/_posts/2010-08-11-track-v2.textile
+++ b/_posts/2010-08-11-track-v2.textile
@@ -7,21 +7,24 @@ author_uri: http://twitter.com/julien51
 author_email_md5: b30ce50678f0e934eaa6697425c59dd7
 ---
 
-It's been up for a few days... just enough time for us to iron anything that you could have gone wrong, but the version 2.0 of our track is live. Internally, we call it trackr, because it's now Ruby (like red diamonds). It uses a handful of Redis, XMPP, Ruby and a few other awesome things. Please ask if you want more details on how it's built. What does it bring? 
+<blockquote>
+  <p>Our Track API evolved over time... Please make sure you refer to the <a href="http://superfeedr.com/documentation#track">track documentation</a> for the current status</p>
+</blockquote>
+
+
+It's been up for a few days... just enough time for us to iron anything that you could have gone wrong, but the version 2.0 of our track is live. Internally, we call it trackr, because it's now Ruby (like red diamonds). It uses a handful of Redis, XMPP, Ruby and a few other awesome things. Please ask if you want more details on how it's built. What does it bring?
 
 h3. Operands
 
 The first thing is the end of the awesome bug which would create matches for "super hamster" when "somebody":http://twitter.com/mperham subscribed to _perham_. It could have been a feature, but for now, we'll stick to something more natural!
 
-It brings the AND operator. Looking for info about the "Apple Store":http://superfeedr.com/track/apple&store, about "San Francisco":http://superfeedr.com/track/san&francisco? That's easy. You can also exclude terms. "Apple-iphone-ipad-ipod":http://superfeedr.com/track/apple&-iphone&-ipad&-ipod should help you screen Apple's ex-core business. You got it: just add query string params, separated by ampersands (&). When to exclude? just append a - (minus) in front of the keyword.
+It brings the AND operator. Looking for info about the "Apple Store":http://superfeedr.com/track?include=apple,store, about "San Francisco":http://superfeedr.com/track?include=san,francisco? That's easy. You can also exclude terms. "Apple-iphone-ipad-ipod":http://superfeedr.com/track?include=apple&exclude=iphone,ipad,ipod should help you screen Apple's ex-core business.
 
 The OR is by essence quite easy : subscribe to 2 feeds matching whatever you need. For once, we're pushing the complexity down to you, but we think it makes sense.
 
 h3. Scoping
 
-We love geo stuff and can't wait to see more feeds actually geo-tagged, so we're paving the way : you can already start to geo-filter searches : want to know about wildfires around your place? Just give us a latitude and longitude, as well as a radius, and we'll be happy to filter out anything that's outside of this. The radius is in kilometers (metric system FTW!). Check "this example":http://superfeedr.com/track/mushrooms&lat=37.7718&lon=-122.445717&within=5.
-
-You may also want to track only the data from a given hub. That's easy, provide us with a hub query param and the domain of the hub. For example, if you want any "gowalla":http://gowalla.com/home checkin at a _starbucks_, you can certainly "try this query":http://superfeedr.com/track/starbucks&hub=hub.gowalla.com.
+We love geo stuff and can't wait to see more feeds actually geo-tagged, so we're paving the way : you can already start to geo-filter searches : want to know about wildfires around your place? Just give us a latitude and longitude, as well as a radius, and we'll be happy to filter out anything that's outside of this. The radius is in kilometers (metric system FTW!). Check "this example":http://superfeedr.com/track?include=mushrooms&lat=37.7718&lon=-122.445717&within=5.
 
 Of course, there is more to be done, but check "our documentation":http://superfeedr.com/documentation#track if you'd like to start tracking some data. We're working on adding more stuff... and if you're a crazy *XPath expert* and know how to build fast matching, I want to chat with you, because Superfeedr's got work for you too.
 
