--- a/_posts/2010-12-02-websockets-and-comet.textile
+++ b/_posts/2010-12-02-websockets-and-comet.textile
@@ -18,7 +18,7 @@ Today, as a subscriber, you can also get Superfeedr's content pushed to you dire
 
 <script src="https://gist.github.com/726390.js?file=gistfile1.js"></script>
 
-As you can see the stream contains several types of messages not just the notifications. For example you can see the line that tells that this user just subscribed to a feed, and later unsubscribed. There is currently no protocol as for these streams, so we chose to adopt the "convention explained":http://blog.new-bamboo.co.uk/2010/2/10/json-event-based-convention-websockets by the folks at "new bamboo":http://new-bamboo.co.uk/ : each message is built with 2 elements : a 'verb' (_subscribe_, _unsubscribe_, _publish_ in our case), as well as scalar which gives more details. We obviously use our "JSON schema":http://superfeedr.com/documentation#json_schema. 
+As you can see the stream contains several types of messages not just the notifications. For example you can see the line that tells that this user just subscribed to a feed, and later unsubscribed. There is currently no protocol as for these streams, so we chose to adopt the "convention explained":http://blog.new-bamboo.co.uk/2010/2/10/json-event-based-convention-websockets by the folks at "new bamboo":http://new-bamboo.co.uk/ : each message is built with 2 elements : a 'verb' (_subscribe_, _unsubscribe_, _publish_ in our case), as well as scalar which gives more details. We obviously use our "JSON schema":http://superfeedr.com/documentation#json_schema.
 
 Since an HTTP connection is still mostly one-way, there is no way to send data on this connection to subscribe to additional feeds for example. However, we also introduce a small REST-like API which allows you to subscribe to feeds or unsubscribe, based on your needs. Since we push the result of subscriptions to the stream, it's recommended to open a stream first, so you can see whether your subscription was a success or not.
 
@@ -28,7 +28,7 @@ h3. Websockets
 
 Unless you lived in a cave for the last year, you probably already heard of "websockets":http://en.wikipedia.org/wiki/WebSockets. They're now supported by modern browsers, such as Chrome, Firefox, Safari, Opera... etc. As they are *part of HTML5*, we can certainly expect an extended support in the coming months, and we want your apps to be ready for when that happens, which is why we also release a websocket API. It's actually very similar to the Comet version and uses the same conventions. It also uses HTTP basic header to authenticate you.
 
-The only significant difference is that websockets _are duplex_. You can receive and send traffic on the same socket! So, to subscribe to feeds, you can very simply send message on the websocket. The messages use the same convention explained a little above : <code>["subscribe", {:topic => "http://superfeedr.com/track/music"}]</code> will perform a subscription.
+The only significant difference is that websockets _are duplex_. You can receive and send traffic on the same socket! So, to subscribe to feeds, you can very simply send message on the websocket. The messages use the same convention explained a little above : <code>["subscribe", {:topic => "http://superfeedr.com/track?include=music"}]</code> will perform a subscription.
 
 h4. A few warnings
 
