--- a/_posts/2011-02-14-notifixlite.textile
+++ b/_posts/2011-02-14-notifixlite.textile
@@ -13,12 +13,12 @@ That's exactly how "Notifixlite":http://notifixlite.appspot.com/ was built : a -
 
 Then, you're set. Notifixlite is a bot to which you can give instructions. Right now the set of instructions is quite minimal :
 
-* <code>/subscribe _url_</code> : subscribes to the feed in question. 
+* <code>/subscribe _url_</code> : subscribes to the feed in question.
 * <code>/unsubscribe _url_</code> : unsubscribes from the feed. You can also use _all_ to unsubscribe from all feeds.
 * <code>/list _page_index_</code> :  list subscriptions, default to page 1.
 * <code>/help</code> : shows this help message!
 
-Of course, you can track any feed out there... including "track feeds":http://superfeedr.com/documentation#track! Superfeedr provides a nice way to filter traffic based on keywords and you can easily subscribe to "http://superfeedr.com/track/valentine":http://superfeedr.com/track/valentine if you want to see any mention of Valentine!
+Of course, you can track any feed out there... including "track feeds":http://superfeedr.com/documentation#track! Superfeedr provides a nice way to filter traffic based on keywords and you can easily subscribe to "http://superfeedr.com/track?include=valentine":http://superfeedr.com/track?include=valentine if you want to see any mention of Valentine!
 
 Also, one of the great things with Notifixlite is that it's *open source* : you can not only "fork it on github":https://github.com/superfeedr/notifixlight, but also run it under your very own "Google App Engine":http://code.google.com/appengine/ account.  If you're feeling brave, feel free to implement any feature that you miss! An import from Google Reader would be quite handsome for example!
 
